# ros2-vm

install/: local_setup.sh  setup.sh
install/mob_rov/share/mob_rov/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mob_rov/share/mob_rov/config/: ros2_control.yaml
install/mob_rov/share/mob_rov/launch/: nav_slam.launch.py  sim.launch.py  sim2.launch.py
install/mob_rov/share/mob_rov/urdf/: lidar.xacro  mob_rov.urdf  mob_rov2.xacro
install/mob_rov/share/mob_rov/worlds/: obstacles.world
log/: latest_build  latest_list
src/mob_rov/: setup.cfg  setup.py
src/mob_rov/config/: drive_bot.rviz  slam_config.yaml
src/mob_rov/launch/: lidar.launch.py  presim.launch.py  sim.launch.py
src/mob_rov/src/: teleop.py
src/mob_rov/urdf/: ros2_control.xacro
