<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mob_rov</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dgomartir@todo.todo">dgomartir</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy,xacro,ros2_control,gazebo_ros,robot_state_publisher,launch,launch_ros,nav2_bringup,slam_toolbox</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
